--- a/env.example
+++ b/env.example
@@ -45,7 +45,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SITE_TYPE='erp'
+SITE_TYPE='ecs'
 CMP_TYPE='cafe'
 
 OC_SELECT_COLOR='#050'
