--- a/env.example
+++ b/env.example
@@ -45,18 +45,24 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SITE_TYPE='ecs'
+
+###
+### Below config are for our application setup
+###
+
+SITE_TYPE='erp'
 CMP_TYPE='cafe'
 
-OC_SELECT_COLOR='#050'
+OC_SELECT_COLOR='#112'
+OC_SELECT_TXT_COLOR='#fff'
+OC_UNSELECT_TXT_COLOR='#fff'
 
-OC_ASCENT_BTN_COLOR='btn-success'
-OC_ASCENT_BG_COLOR='bg-success'
+OC_ASCENT_BTN_COLOR='btn-primary'
+OC_ASCENT_BG_COLOR='bg-primary'
 OC_ASCENT_TEXT_COLOR='text-white'
-OC_ASCENT_TEXT_LB_COLOR='text-success'
+OC_ASCENT_TEXT_LB_COLOR='text-white'
 
 OC_ASCENT_HL_COLOR='text-white'
 OC_ASCENT_HL_TXT_COLOR='text-white'
 
-# MODULES='bgc'
-MODULES='dashboard,cms,shop,'
+MODULES='dashboard,product,cms,shop,school,report,team,crm,project,'
