--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-APP_NAME='Khajanchi'
+APP_NAME='Cbswei'
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -50,7 +50,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 ### Below config are for our application setup
 ###
 
-SITE_TYPE='erp'
+SITE_TYPE='cms'
 CMP_TYPE='cafe'
 
 MODULES='dashboard,product,cms,shop,school,report,team,crm,project,'
