--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.3.0|^8.0",
-        "doctrine/dbal": "^2.0",
-        "fruitcake/laravel-cors": "^2.0",
+        "doctrine/dbal": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^9.0",
+        "laravel/framework": "^10.0",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.0",
+        "laravel/ui": "^4.0",
         "livewire/livewire": "^2.10",
         "neitanod/forceutf8": "^2.0"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
+        "spatie/laravel-ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^6.1",
@@ -47,7 +46,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
