composer json update

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "samarium erp",
+    "name": "laravel/laravel",
     "type": "project",
     "description": "The easy to use ERP.",
     "keywords": [
