Add new entries to config/app.php & env.example

--- a/env.example
+++ b/env.example
@@ -52,5 +52,15 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SITE_TYPE='cms'
 CMP_TYPE='cafe'
-
+CMP_URL=
 MODULES='dashboard,product,cms,shop,school,report,team,crm,project,'
+HAS_VAT=
+ANNOUNCEMENT=
+OC_ASCENT_BTN_COLOR=
+OC_ASCENT_BG_COLOR=
+OC_ASCENT_TEXT_COLOR=
+OC_ASCENT_HL_TXT_COLOR=
+OC_SELECT_COLOR=
+OC_SELECT_TXT_COLOR=
+OC_UNSELECT_TXT_COLOR=
+SITE_ECS_THEME_BS_CLASS=
