--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+version: '3'
+
+services:
   app:
     build:
       context: .
@@ -18,8 +21,41 @@
       - ./:/var/www/html
       - /var/www/html/node_modules
       - /var/www/html/vendor
-    entrypoint: ["/var/www/html/docker-entrypoint.sh"]
+    entrypoint: ["/var/www/html/docker-entrypoint.sh"]   # <-- this is the only line you add
     depends_on:
       - db
     networks:
       - laravel-network
+
+  db:
+    image: mysql:8.0
+    container_name: samarium_db
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: samarium
+      MYSQL_USER: samarium_user
+      MYSQL_PASSWORD: samarium_password
+      MYSQL_ROOT_PASSWORD: secret
+    volumes:
+      - dbdata:/var/lib/mysql
+    ports:
+      - "21876:3306"
+    networks:
+      - laravel-network
+
+  redis:
+    image: redis:alpine
+    container_name: samarium_redis
+    restart: unless-stopped
+    networks:
+      - laravel-network
+
+networks:
+  laravel-network:
+    driver: bridge
+
+volumes:
+  laravel-storage:
+  laravel-cache:
+  dbdata:
+    driver: local
