refactor: optimize database queries during console commands

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/helpers.php"
+          "app/Helpers/helpers.php"
         ]
     },
     "autoload-dev": {
